# gencast

./: .gitignore  GUIA_GENCast.md  README.md  pyproject.toml
configs/: era5_0p25deg.yaml  era5_1deg.yaml  mini.yaml
src/gencast_repro/: __init__.py  cli.py  config.py  constants.py  inference.py
src/gencast_repro/data/: __init__.py  dataset.py  normalization.py  synthetic.py  variables.py
src/gencast_repro/geometry/: __init__.py  connectivity.py  icosphere.py  spherical.py
src/gencast_repro/models/: __init__.py  diffusion.py  gencast.py  layers.py  message_passing.py  sparse_transformer.py
src/gencast_repro/training/: __init__.py  engine.py  losses.py  metrics.py
tests/: test_config.py  test_icosphere.py  test_model_smoke.py
